<resources>
    <string name="app_name">Ownpos</string>
    <string name="action_clear_log">Clear</string>
    <string name="action_toggle_positioning">Start/stop positioning</string>

    <string name="action_settings">Settings</string>
    <string name="action_log_activity">Logar no Sistema</string>
    <string name="title_log_activity">Identifique-se</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_google_plus">Google Plus</string>

    <string name="limparLogin">Novo Login</string>



    <string name="navigation_drawer_open">opened</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="action_transition_activity">Transition</string>
    <string name="title_activity_transition">TransitionActivity</string>
    <string name="title_activity_ksochiro">KsochiroActivity</string>
    <string name="action_ksochiro_activity">Ksochiro</string>
    <string name="app_label">TCMaterialDesign</string>
    <string name="searchable_activity">SearchableActivity</string>
    <string name="search_hint">Buscar</string>
    <string name="action_searchable_activity">Buscar carros</string>
    <string name="delete_historic">Deletar Histórico</string>
    <string name="action_delete">Rremover cookie</string>
    <string name="title_activity_car_widget">CarWidgetConfigurationActivity</string>
    <string name="et_subject_hint">Assunto</string>
    <string name="tv_contact_title">Contato Empresa</string>
    <string name="title_activity_contact">Contato</string>
    <string name="et_message_hint">Mensagem de contato</string>
    <string name="action_send_contact">Enviar</string>


    <!-- facebook -->
    <string name="facebook_app_id">1590966094499577</string>



    <!-- CardView objAcervo-->
    <string name="lb_autor">Autor:</string>
    <string name="lb_coautor">Co-Autor:</string>
    <string name="lb_publicacao">Publicação:</string>
    <string name="lb_resumo">Resumo:</string>
    <string name="ipsum">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</string>
    <string name="action_location">Busccar dados GPS</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <!-- text float -->
    <string name="float_text_titulo">Digite o Título..</string>
    <string name="float_text_autor">Digite o Autor</string>
    <string name="float_text_assunto">Digite o Assunto</string>
    <string name="float_text_resumo">Digite uma parte do Resumo</string>
    <string name="float_text_chamada">Digite a Chamada</string>


    <!-- Turma Layout -->
    <string name="aulasTitulo">Título: </string>
    <string name="aulasDescricao">Descrição: </string>
    <string name="aulasCurso">Curso: </string>
    <string name="aulasProfessor">Professor: </string>
    <string name="aulasSite">Site: </string>
    <string name="aulasToolbarTitulo">Lista de aulas marcadas</string>


</resources>
