<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:floatlabel="http://schemas.android.com/apk/res-auto"
    tools:context="itauamachado.ownpos.fragments.AcervoFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" />

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/pb_load"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <LinearLayout
        android:id="@+id/ll_itensBusca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/float_text_titulo"
            floatlabel:floatLabelColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/tv_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/float_text_autor"
            floatlabel:floatLabelColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/tv_assunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/float_text_assunto"
            floatlabel:floatLabelColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/tv_resumo"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:hint="@string/float_text_resumo"
            floatlabel:floatLabelColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
